
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static int hex_char_to_int(char c) {
 if (c >= '0' && c <= '9') {
  return c - '0';
 }
 else if (c >= 'a' && c <= 'f') {
  return c - 'a' + 10;
 }
 else if (c >= 'A' && c <= 'F') {
  return c - 'A' + 10;
 }
 return -1;
}
